Popravljeno FutureWarning u groupby

--- a/heart_disease_classification.ipynb
+++ b/heart_disease_classification.ipynb
@@ -1910,18 +1910,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "id": "097c1d73",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Andjela\\AppData\\Local\\Temp\\ipykernel_13396\\1249780344.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df.groupby('bmi_group')['cardio']\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1986,14 +1978,14 @@
        "Obese        37.5  62.5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bmi_cardio_summary = (\n",
-    "    df.groupby('bmi_group')['cardio']\n",
+    "    df.groupby('bmi_group', observed=True)['cardio']\n",
     "    .value_counts(normalize=True)\n",
     "    .unstack()\n",
     "    .round(3) * 100\n",
