Uskladjen stil teksta

--- a/heart_disease_classification.ipynb
+++ b/heart_disease_classification.ipynb
@@ -3663,7 +3663,7 @@
    "metadata": {},
    "source": [
     "## K-Nearest Neighbors (KNN)\n",
-    "KNN je neparametarski algoritam klasifikacije koji dodeljuje klasu tački klasi podataka na osnovu većinske klase među njenim najbližim susedima. Model se oslanja na proračune udaljenosti, što skaliranje karakteristika čini ključnim korakom."
+    "KNN je neparametarski algoritam klasifikacije koji određuje klasu uzorka prema većinskoj klasi njegovih najbližih suseda. Kako se zasniva na udaljenostima između podataka, skaliranje karakteristika je od ključnog značaja."
    ]
   },
   {
@@ -3920,11 +3920,7 @@
    "metadata": {},
    "source": [
     "## Veštačka neuronska mreža\n",
-    "Veštačka neuronska mreža koristi se kao glavni model zbog svoje sposobnosti da obuhvati složene, nelinearne odnose između karakteristika. Mreža sastoji se od više povezanih slojeva i trenira se korišćenjem metode povratnog širenja. \n",
-    "\n",
-    "Zašto veštačke neuronske mreže?\n",
-    "\n",
-    "Veštačke neuronske mreže imaju sposobnost modelovanja složenih nelinearnih odnosa između ulaznih karakteristika. Zbog toga su posebno pogodne za medicinske zadatke predviđanja, gde istovremeno deluje više međusobno povezanih faktora."
+    "Veštačka neuronska mreža koristi se kao glavni model zbog svoje sposobnosti da obuhvati složene, nelinearne odnose između karakteristika. Mreža sastoji se od više povezanih slojeva i trenira se korišćenjem metode povratnog širenja. \n"
    ]
   },
   {
@@ -4258,9 +4254,7 @@
    "id": "e4a1a4c1",
    "metadata": {},
    "source": [
-    "### ANN 5 – SMOTE + ANN\n",
-    "\n",
-    "Primena SMOTE oversampling-a i evaluacija uticaja na ANN"
+    "### ANN 5 – SMOTE + ANN"
    ]
   },
   {
@@ -4872,7 +4866,8 @@
    "source": [
     "## Završni zaključak\n",
     "\n",
-    "Ovaj projekat demonstrira uspešnu primenu tehnika mašinskog učenja u predviđanju srčanih oboljenja. Sveukupno posmatrano, izbor optimalnog modela zavisi od konkretnog cilja primene. Ukoliko je prioritet maksimalna detekcija obolelih pacijenata, KNN se izdvaja kao najpogodniji model. Sa druge strane, ako je cilj postizanje stabilnih i uravnoteženih performansi, ANN predstavlja najefikasnije rešenje. Logistička regresija ostaje pouzdan i interpretabilan referentni model."
+    "Ovaj projekat demonstrira uspešnu primenu tehnika mašinskog učenja u predviđanju srčanih oboljenja. Sveukupno posmatrano, izbor optimalnog modela zavisi od konkretnog cilja primene.\n",
+    "Na osnovu dobijenih rezultata, model ANN (SGD) pokazao je najbolje ukupne performanse i najstabilniji balans između preciznosti i sposobnosti otkrivanja pozitivnih slučajeva. Logistička regresija se istakla po preciznosti, ali je bila sklonija propuštanju dela pozitivnih primera, dok je KNN model ostvario nešto slabije i manje konzistentne rezultate u poređenju sa ostalim pristupima.  \n"
    ]
   }
  ],
